# src/api/src/routers/user.ts
@@ -1,14 +1,24 @@
 import router from "express";
+import {
+  createUserController,
+  getUserController,
+  updateUserController,
+  getWatchlistController,
+  updateWatchlistController,
+  updateNotificationController,
+  searchUserController,
+  getTopPriceUsersController,
+} from "../controllers/user";
 
 const routers = router.Router();
 
-routers.post("/");
-routers.get("/:address");
-routers.put("/:address");
-routers.get("/watchlists/:address");
-routers.put("/watchlist");
-routers.put("/notification");
-routers.get("/search/:keyword");
-routers.get("/top-price-users");
+routers.post("/", createUserController);
+routers.get("/:address", getUserController);
+routers.put("/:address", updateUserController);
+routers.get("/watchlists/:address", getWatchlistController);
+routers.put("/watchlist", updateWatchlistController);
+routers.put("/notification/:address", updateNotificationController);
+routers.get("/search/:keyword", searchUserController);
+routers.get("/top-price-users", getTopPriceUsersController);
 
 export default routers;
